    repository folder default views.
    [lgraf]
  - Disable public_trial edit_form when parents dossier is inactive.
    [phgross]
  - Added public_trial_statement field to the public_trial edit form.
    [phgross]


3.3.2 (2014-08-08)
------------------

- Fixed seralization error in responsetransporter, when changes containing date's.
  [phgross]


3.3.1 (2014-07-28)
------------------

- Made logout overlay easier to customize.
  [phgross]

- AdvancedSearch: Fixed bug which renders the wrong widget for first request.
  [phgross]

- Search type filter: limit types to main types.
  [phgross]

- Overwrite searchbox viewlet and javascript.
  So there is always a advanced search link.
  [Julian Infanger]

- Breadcrumb: Replace Home label with curent client label.
  [phgross]

- Disable edit-bar for the advancedsearch form.
  [phgross]

- Dropped no longer used attach remote document action.
  [phgross]

- Moved time column in journal tab to the far left.
  [lknoepfel]

- Fixed bug where quickupload didn't remove the active class.
  [lknoepfel]

- Renamed german version of move-items-button.
  [lknoepfel]

- Initialized opengever.sharing version. Moved prepoverlay initialization to opengever.base.
  [lknopfel]

- Added download copy in tooltip.
  [lknoepfel]

- Display document mimetype icons in ContentTreeWidget.
  [phgross]

- Use existing styles for table in tasktemplate view.
  [Julian Infanger]

- Changed default placeholder for searchbox.
  [Julian Infanger]

- Removed unused yearfolder workflow.
  [lknoepfel]

- Fixed table display in add-tasktemplate form.
  [phgross]

- Fixed widget definition for date fields in tasks edit form.
  [phgross]

- Added viewlet to colorize special pages as dev, test, ...
  [Julian Infanger]

- Fixed outdated profile versions for og.base:default and og.examplecontent:default.
  [lgraf]

- Added repository.csv to xlsx script.
  [lknoepfel]

- Changed format of examplecontent excel to xlsx.
  [lknoepfel]
