@@ -30,6 +30,7 @@
     <include file="profiles.zcml" />
 
     <include package=".browser" />
+    <include package=".menu" />
     <include package=".viewlets" />
     <include package=".upgrades" />
 
