@@ -1,6 +1,7 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    xmlns:upgrade-step="http://namespaces.zope.org/ftw.upgrade"
     i18n_domain="ftw.tabbedview">
 
     <!-- 1 -> 2301 -->
@@ -42,6 +43,7 @@
         profile="opengever.document:default"
         />
 
+    <!-- 2601 -> 2602-->
     <genericsetup:upgradeStep
         title="Remove related_items index."
         description=""
@@ -106,6 +108,15 @@
         directory="profiles/3403"
         for="Products.CMFPlone.interfaces.IMigratingPloneSiteRoot"
         provides="Products.GenericSetup.interfaces.EXTENSION"
+        />
+
+    <!-- 3403 -> 4000 -->
+    <upgrade-step:importProfile
+        title="Add checkin without comment action."
+        profile="opengever.document:default"
+        source="3403"
+        destination="4000"
+        directory="profiles/4000"
         />
 
 </configure>
